--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,4 @@
 adnbppl.php
 .git/*
 .idea/*
-local_config.php
-local_config.json
-**/local_config.php
-**/local_config.json
-buckets/adnbp/config/*
-buckets/adnbp/localize/*
-tests/local_credentials
+credentials.json
