config.json changes rootPath constant from single key to double key

--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "redirect: Redirect Patterns": [{
         "/":"/api/socialnetworks/status"
     }],
-    "include: Social networks credentials keys.":"{rootPath}/credentials.json"
+    "include: Social networks credentials keys.":"{{rootPath}}/credentials.json"
 }
