--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         }
     ],
     "require": {
-        "cloudframework-io/cfsocial": "dev-marketing"
+        "cloudframework-io/cfsocial": "dev-master"
     }
 }
